Fix overflow issue

--- a/website/pages/docs/re-styles.css
+++ b/website/pages/docs/re-styles.css
@@ -1,3 +1,8 @@
+/* hack to fix overflow scrollbar issue */
+#__next #p-docs #inner {
+  overflow: unset;
+}
+
 div.cards {
   display: grid;
   gap: 24px;
